IF (ARM_SYS)
        MESSAGE(STATUS "ARM SYSTEM")
	include_directories(/opt/zynq/libxml2-arm/include/libxml2)
	link_directories(/opt/zynq/libxml2-arm/lib)
ELSE ()
        MESSAGE(STATUS "X86 SYSTEM")
	find_package(LibXml2 REQUIRED)
	include_directories(${LIBXML2_INCLUDE_DIR})
ENDIF ()

include_directories(.  RobSoft ../SystemLayer)
add_subdirectory(RobSoft ../SystemLayer)

aux_source_directory(src DIR_ROBOTSTRUCTURE_SRCS)
add_library(RobotStructure ${DIR_ROBOTSTRUCTURE_SRCS})
target_link_libraries(RobotStructure RobSoft)
#target_link_libraries(RobotStructure ${LIBXML2_LIBRARIES})
IF (ARM_SYS)
	target_link_libraries(RobotStructure xml2)
ELSE () 
	target_link_libraries(RobotStructure ${LIBXML2_LIBRARIES})
ENDIF ()
