find_package(Threads)

IF (ARM_SYS)
	MESSAGE(STATUS "ARM SYSTEM")
	include_directories(/opt/zynq/libxml2-arm/include/libxml2)
	link_directories(/opt/zynq/libxml2-arm/lib)
ELSE ()
	MESSAGE(STATUS "X86 SYSTEM")
	find_package(LibXml2 REQUIRED)
	include_directories( ${LIBXML2_INCLUDE_DIR} )
ENDIF ()
include_directories(. ../../RobotStructure)

IF (WIN32)
    MESSAGE(STATUS "Now is windows")
    include_directories(../../SystemLayer/WindowsAPI)
ELSEIF (APPLE)
    MESSAGE(STATUS "Now is Apple systens.")
ELSEIF (UNIX)
    MESSAGE(STATUS "Now is UNIX-like OS's.")
    include_directories(../../SystemLayer/LinuxAPI)
ENDIF ()

aux_source_directory(src DIR_ROBOTLINK_SRCS)
add_library(RobotLink ${DIR_ROBOTLINK_SRCS})
target_link_libraries(RobotLink RobotStructure)
target_link_libraries(RobotLink SystemAPI)
IF (ARM_SYS)
	target_link_libraries(RobotLink xml2)
ELSE () 
	target_link_libraries(RobotLink ${LIBXML2_LIBRARIES})
ENDIF ()
target_link_libraries(RobotLink ${CMAKE_THREAD_LIBS_INIT})
