IF (ARM_SYS)
	MESSAGE(STATUS "ARM SYSTEM")
	include_directories(/opt/zynq/libxml2-arm/include/libxml2)
	link_directories(/opt/zynq/libxml2-arm/lib)
ELSE ()
	MESSAGE(STATUS "X86 SYSTEM")
	find_package(LibXml2 REQUIRED)
	include_directories(${LIBXML2_INCLUDE_DIR})
ENDIF ()
include_directories(.)

aux_source_directory(src DIR_ROBSOFT_SRCS)
add_library(RobSoft ${DIR_ROBSOFT_SRCS})
IF (ARM_SYS)
	target_link_libraries(RobSoft xml2)
ELSE () 
	target_link_libraries(RobSoft ${LIBXML2_LIBRARIES})
ENDIF ()
